# koopa-flows

./: .gitignore  LICENSE  README.md  deployment.md  environment-deepblink.yaml  environment-segmentationmodels.yaml  environment.yaml  requirements.txt  setup.cfg
src/: __init__.py  flows.py  tasks_postprocess.py  tasks_preprocess.py  tasks_segment.py  tasks_spots.py  tasks_util.py  workflow-deployment.yaml
src/flow/: DeepBlinkFlow.py  FixedCellFlow.py  FlowParameters.py  ParquetResource.py  deepblink_flow.py  fixed_cell_flow.py  flow_parameters.py
src/flow/preprocessing/: flow.py  task.py
src/koopaflows/: cpr_parquet.py  fixed_cell_flow.py  flow_parameters.py  utils.py
src/koopaflows/collocalization/: colloc_tasks.py
src/koopaflows/merge/: merge_tasks.py
src/koopaflows/meta_flows/: brain_cell_flow_3d.py  fixed_cell_flow.py
src/koopaflows/preprocessing/: flow.py  task.py
src/koopaflows/segmentation/: cellpose_segmentation_flow.py  other_dl_segmentation_flow.py  other_threshold_segmentation_flow.py  threshold_segmentation_flow.py
src/koopaflows/spot_detection/: deepblink_flow.py  spot_detection_flow.py
tests/: README.md  conftest.py  test_2d.py  test_cli.py  test_flies.py  test_live.py
tests/config/: fish2d.cfg  flies.cfg  live.cfg
