[metadata]
name = koopa-flows
description = Koopa flows.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/fmi-basel/gchao-koopa-flows
author = Bastian Eichenberg, Tim-Oliver Buchholz
author_email = tim-oliver.buchholz@fmi.ch
license = BSD-3-Clause
license_file = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    License :: OSI Approved :: Apache-2.0
    License :: OSI Approved :: BSD License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
project_urls =
    Bug Tracker = https://github.com/fmi-basel/gchao-koopa-flows/issues
    Documentation = https://github.com/fmi-basel/gchao-koopa-flows#README.md
    Source Code = https://github.com/fmi-basel/gchao-koopa-flows
    User Support = https://github.com/fmi-basel/gchao-koopa-flows/issues

[options]
packages = find:
install_requires =
    koopa
    prefect
    faim_prefect
python_requires = >=3.9
package_dir =
    = src
setup_requires =
    setuptools-scm

[options.packages.find]
where = src
